--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -195,6 +195,10 @@ input[type="text"] {
     font-size: large;
   }
 
+  h1 {
+    font-size: 2.5rem;
+  }
+
   .container {
     height: unset;
   }
@@ -231,24 +235,25 @@ input[type="text"] {
     font-size: 1.5rem;
   }
 
-  .menu-list {
-    width: 14rem;
-    right: 0;
-    margin: 1rem;
-    justify-content: space-evenly;
-  }
-
   .add-form {
-    margin: 2rem 0;
+    margin-bottom: 3rem;
     width: 100%;
   }
 
   .inputs {
-    margin: 10rem auto;
+    margin: 6rem auto;
   }
 
   .table-scroll {
-    height: 33rem;
+    height: 24rem;
+  }
+
+  .data {
+    padding: 1rem;
+  }
+
+  .score-heading {
+    padding: 1.5rem 0;
   }
 }
 
